# tcpudpserver

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  tcpudpserver.service
client/: CMakeLists.txt  Makefile
client/include/: baseclientserver.h  client.h
client/src/: baseclientserver.cpp  client.cpp  main.cpp
debian/: changelog  control  copyright  install  rules
include/: baseclientserver.h  general.h  server.h
src/: baseClientServer.cpp  baseclientserver.cpp  main.cpp  server.cpp
